UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/FormData__c.object-meta.xml
<CustomObject>
    <description>FormAssembly data container</description>
    <label>FormData</label>
    <nameField>
        <displayFormat>FD-{00000000}</displayFormat>
        <label>FormData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>