UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FormData</relationshipLabel>
    <relationshipName>FormData</relationshipName>
    <type>Lookup</type>
</CustomField>