UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/BTN__c.field-meta.xml
<CustomField>
    <fullName>BTN__c</fullName>
    <label>BTN</label>
    <type>Phone</type>
</CustomField>