UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/DBA_if_different__c.field-meta.xml
<CustomField>
    <fullName>DBA_if_different__c</fullName>
    <label>DBA (if different)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>