UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Agent Email</label>
    <type>Email</type>
</CustomField>