UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/Legal_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Business_Name__c</fullName>
    <label>Legal Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>