UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/New_Service_or_Existing_Service__c.field-meta.xml
<CustomField>
    <fullName>New_Service_or_Existing_Service__c</fullName>
    <description>If existing, please attach a signed LOA.</description>
    <inlineHelpText>If existing, please attach a signed LOA.</inlineHelpText>
    <label>New Service or Existing Service?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>