UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>FormData</relationshipLabel>
    <relationshipName>FormData</relationshipName>
    <type>Lookup</type>
</CustomField>