UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/Reply_To_Email1__c.field-meta.xml
<CustomField>
    <fullName>Reply_To_Email1__c</fullName>
    <label>Reply To Email1</label>
    <type>Email</type>
</CustomField>