UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/Reply_To_Emails__c.field-meta.xml
<CustomField>
    <fullName>Reply_To_Emails__c</fullName>
    <label>Reply To Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>