UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Request</fullName>
            </value>
            <value>
                <fullName>Contract Request</fullName>
            </value>
            <value>
                <fullName>Order Request</fullName>
            </value>
            <value>
                <fullName>Post Sale Care</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Repair Escalation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>