UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/Telecom_Broker__c.field-meta.xml
<CustomField>
    <fullName>Telecom_Broker__c</fullName>
    <label>Telecom Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>