UCF-APR2.4/ftr main/force-app/main/default/objects/FormData__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Request</fullName>
            </value>
            <value>
                <fullName>External Support Request</fullName>
            </value>
            <value>
                <fullName>Call Center Support Request</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>